당근마켓 클론코딩 오류 수정
화면 임계점 이상 확대시 나타나는 문구 투명조절이 아닌 있음과 없음으로 조절, 위치 상단 고정아닌 화면 고정

--- a/18.Daangn market/style.css
+++ b/18.Daangn market/style.css
@@ -10,14 +10,14 @@ body {
     sans-serif;
 }
 
-@media screen and(max-width: 400px) {
+@media screen and(max-width: 500px) {
   .media-info-msg {
-    opacity: 1;
+    display: none;
   }
 }
 
 .media-info-msg {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
@@ -27,5 +27,4 @@ body {
   align-items: center;
   background-color: salmon;
   color: white;
-  opacity: 0;
 }
