--- a/18.Daangn market/footer.css
+++ b/18.Daangn market/footer.css
@@ -30,6 +30,22 @@ footer {
   transform: scale(1);
 }
 
+@keyframes icons-둥-둥 {
+  0% {
+    transform: translateY(0px);
+  }
+  50% {
+    transform: translateY(-3px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+
 .footer-icons__img {
   width: 22px;
+}
+
+.footer-icons:hover .footer-icons__img {
+  animation: 1s icons-둥-둥 infinite;
 }
