--- a/18.Daangn market/main.css
+++ b/18.Daangn market/main.css
@@ -48,7 +48,7 @@ main {
 }
 
 .write-btn {
-  background-color: #f7863b;
+  background-color: var(--button-primary);
   color: white;
   border-radius: 30px;
   padding: 10px 15px 10px 15px;
@@ -58,4 +58,9 @@ main {
   right: 12.5px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+
+.write-btn:hover {
+  background-color: var(--button-hover);
 }
