--- a/18.Daangn market/style.css
+++ b/18.Daangn market/style.css
@@ -3,6 +3,11 @@
 @import "footer.css";
 @import "main.css";
 
+:root {
+  --button-primary: rgb(247, 134, 59);
+  --button-hover: rgba(247, 134, 59, 0.8);
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Apple SD Gothic Neo",
     "Pretendard Variable", Pretendard, Roboto, "Noto Sans KR", "Segoe UI",
@@ -10,11 +15,11 @@ body {
     sans-serif;
 }
 
-@media screen and(max-width: 500px) {
+/*@media screen and(max-width: 500px) {
   .media-info-msg {
     display: none;
   }
-}
+}*/
 
 .media-info-msg {
   position: fixed;
@@ -27,4 +32,5 @@ body {
   align-items: center;
   background-color: salmon;
   color: white;
+  display: none;
 }
